# DailyPracticeWork

./: README.md
C&C++/AOSearch/: CMakeLists.txt
C&C++/AOSearch/CMakeProject1/: AOsearch.cpp  CMakeLists.txt  Lib.cpp  Lib.h  input.txt  output.txt
C&C++/AOSearch/CMakeProject1/rapidjson-master/: CMakeLists.txt
C&C++/AOSearch/CMakeProject1/rapidjson-master/doc/: dom.zh-cn.md  tutorial.md
C&C++/AOSearch/CMakeProject1/rapidjson-master/include/rapidjson/: allocators.h  document.h  memorybuffer.h  pointer.h  reader.h  schema.h  stringbuffer.h  uri.h  writer.h
C&C++/AOSearch/CMakeProject1/rapidjson-master/include/rapidjson/error/: error.h
C&C++/AOSearch/CMakeProject1/rapidjson-master/include/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  (+2 more)
C&C++/AOSearch/CMakeProject1/rapidjson-master/test/perftest/: CMakeLists.txt
C&C++/AOSearch/CMakeProject1/rapidjson-master/test/unittest/: CMakeLists.txt
C&C++/AOSearch/CMakeProject1/schedule/: 0116.json  0117.json  0118.json  0119.json  0120.json  0121.json  0122.json
C&C++/Mountain cs128/: CMakeLists.txt  Color.cc  Color.hpp  Grayscale_image.hpp  Mountain  Path.cc  Path.hpp  Path_image.cc  Path_image.hpp  elevation_dataset.cc  elevation_dataset.hpp  grayscale_image.cc  main.cpp
C&C++/Turing Machine/: .clang-tidy  CMakeLists.txt  DenseTuringMachine.cpp  DenseTuringMachine.h  Main.cpp  MenuSystem.cpp  MenuSystem.h  SparseTuringMachine.cpp  SparseTuringMachine.h  TuringMachine.h  TuringMachineState.cpp  TuringMachineState.h  TuringTape.cpp  TuringTape.h  report.md
(+256 files in other folders)
